--- a/pom.xml
+++ b/pom.xml
@@ -36,9 +36,9 @@
         </dependency>
         <!--dbcp2-->
         <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-dbcp2</artifactId>
-            <version>2.1.1</version>
+            <groupId>commons-dbcp</groupId>
+            <artifactId>commons-dbcp</artifactId>
+            <version>1.4</version>
         </dependency>
         <!--mybatis-->
         <dependency>
