--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,4 +1,4 @@
 jdbc.driverClassName= com.mysql.jdbc.Driver
-jdbc.url= jdbc:mysql://127.0.0.1:3306/neteasedb
+jdbc.url= jdbc:mysql://localhost:3306/neteasedb?useUnicode=true&characterEncoding=UTF-8
 jdbc.username=tomcat
 jdbc.password=tomcat
