--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,4 +1,4 @@
 jdbc.driverClassName= com.mysql.jdbc.Driver
-jdbc.url= jdbc:mysql://59.111.102.141:3306/neteasedb?useUnicode=true&characterEncoding=UTF-8
-jdbc.username=tomcat
-jdbc.password=tomcat
+jdbc.url= jdbc:mysql://localhost:3306/neteasedb?useUnicode=true&characterEncoding=UTF-8
+jdbc.username=root
+jdbc.password=root
